force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/vlocity_ins__ProfSegAssignment__c.object-meta.xml
<CustomObject>
    <description>Assignment of Profiling segments</description>
    <label>Deprecated Profiling Segment Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Profiling Segment Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated Profiling Segment Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>