force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/fields/vlocity_ins__AddDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AddDate__c</fullName>
    <description>Segment Start Date ( when a segment was last added)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Add Date</label>
    <type>DateTime</type>
</CustomField>