force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/fields/vlocity_ins__EndStory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EndStory__c</fullName>
    <description>Story Id resulting in this segment removal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Story</label>
    <length>18</length>
    <type>Text</type>
</CustomField>