force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/fields/vlocity_ins__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectId__c</fullName>
    <description>Object ,with assigned Segment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>