force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/fields/vlocity_ins__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ObjectType__c</fullName>
    <description>Type of Object being assigned in this segment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ObjectType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>