force-app/main/default/objects/vlocity_ins__ProfSegAssignment__c/fields/vlocity_ins__StartStory__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartStory__c</fullName>
    <description>Story Id resulting in this Segment Assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Story</label>
    <length>18</length>
    <type>Text</type>
</CustomField>